--- a/Downloads/BestClassEver-master/index.html
+++ b/Downloads/BestClassEver-master/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 <h1>Hello Web!</h1>
-<p>I like creating things and solving problems!!</p>
+<p>I like creating things and solving problems!</p>
 </body>
 </html>
+
+<script type="text/javascript">
+	background: red;
+</script>
